--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-xs-12">
-<!--        <button class="btn btn-success" (click)="showRecipes()">Show Recipes</button>-->
+        <button class="btn btn-success" (click)="showRecipes()">Show Recipes</button>
     </div>
     <div class="col-xs-12">
         <app-recipe-list-item
