--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,3 +1,6 @@
+<div>
+    <button class="btn btn-primary" routerLink="/recipes">back</button>
+</div>
 <div class="list-group-item clearfix" *ngIf="recipeDetails != undefined">
     <span>
         <img src="{{recipeDetails.image}}" alt="{{recipeDetails.title}}" class="img-responsive" style="max-height: 200px;">
