added header and menu service

--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -25,4 +25,7 @@
             </li>
         </ul>
     </div>
+    <div>
+        <button class="btn btn-primary" (click)="addToRecipe(recipeDetails)">Add to Menu</button>
+    </div>
 </div>
