--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,17 +1,33 @@
 <nav class="navbar navbar-default">
     <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-            <a href="#" class="navbar-brand">Recipe Book</a>
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse">
+                <span class="icon-bar" *ngFor="let iconBar of [1, 2, 3]"></span>
+            </button>
+            <a routerLink="/" class="navbar-brand">Feast Planner</a>
         </div>
 
+        <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li routerLinkActive="active"><a routerLink="/recipes">Recipes</a></li>
-                <li routerLinkActive="active"><a routerLink="/menus">Menus</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a >Login</a></li>
+                <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-user"></span> <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a>Signed in as </a></li>
+                        <li role="separator" class="divider"></li>
+                        <li routerLink="/menu"><a>Your menus</a></li>
+                        <li routerLink="/menu/new"><a>New menu</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a>Sign out</a></li>
+                    </ul>
+                </li>
             </ul>
-        </div>
-    </div>
+        </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
 </nav>
+
+
