added filters to recipe search

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -20,7 +20,7 @@
                         <li><a>Signed in as </a></li>
                         <li role="separator" class="divider"></li>
                         <li routerLink="/menu"><a>Your menus</a></li>
-                        <li routerLink="/menu/new"><a>New menu</a></li>
+<!--                        <li routerLink="/menu/new"><a>New menu</a></li>-->
                         <li role="separator" class="divider"></li>
                         <li><a>Sign out</a></li>
                     </ul>
