--- a/src/app/recipes/recipe-list/recipe-list-item/recipe-list-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-list-item/recipe-list-item.component.html
@@ -8,5 +8,7 @@
     <div class="pull-right">
         <h4 class="list-group-item-heading">{{recipeListItem.title}}</h4>
         <p class="list-group-item-text">Ready in {{recipeListItem.readyInMinutes}} minutes</p>
+        <button class="btn btn-primary">Add to Menu Card</button>
     </div>
+
 </a>
