--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,7 +1,8 @@
+<app-filters></app-filters>
 <div class="row">
-    <div class="col-xs-12">
-        <button class="btn btn-success" (click)="showRecipes()">Show Recipes</button>
-    </div>
+<!--    <div class="col-xs-12">-->
+<!--        <button class="btn btn-success" (click)="showRecipes()">Show Recipes</button>-->
+<!--    </div>-->
     <div class="col-xs-12">
         <app-recipe-list-item
                 *ngFor="let listItem of recipeList"
