working on new menu card

--- a/src/app/filters/filters.component.html
+++ b/src/app/filters/filters.component.html
@@ -41,47 +41,7 @@
                     </select>
                 </div>
 
-
-
-
-<!--                <div formArrayName="courseArray">-->
-<!--                    <button class="btn btn-default" type="button" (click)="onAddCourse()">Add course</button>-->
-<!--                    <div class="form-group" *ngFor="let ArrayControl of courseArray.controls; let i = index">-->
-<!--                        <select [formControlName]="i" class="form-control">-->
-<!--                            <option class="placeholder" selected disabled value="">Select Course</option>-->
-<!--                            <option *ngFor="let course of courses">{{ course }}</option>-->
-<!--                        </select>-->
-<!--                    </div>-->
-<!--                </div>-->
-
-
-<!--                <button class="btn btn-default" type="button" (click)="onAddNewCourse()">Add New course with diet</button>-->
-<!--                <div>-->
-<!--                    <div formArrayName="newCourse" class="course-name">-->
-<!--                        <div class="form-group" *ngFor="let con of newCourse.controls; let i = index">-->
-<!--                            <select [formControlName]="i" class="form-control">-->
-<!--                                <option class="placeholder" selected disabled value="">Select Course</option>-->
-<!--                                <option *ngFor="let course of courses">{{ course }}</option>-->
-<!--                            </select>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                    <div formArrayName="courseDiet" class="diet-name">-->
-<!--                        <div class="form-group" *ngFor="let con of courseDiet.controls; let i = index">-->
-<!--                            <select [formControlName]="i" class="form-control">-->
-<!--                                <option class="placeholder" selected disabled value="">Select diet</option>-->
-<!--                                <option *ngFor="let diet of diets">{{ diet }}</option>-->
-<!--                            </select>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                </div>-->
-
-
-
-
-
-
-
-                <button class="btn btn-primary" type="submit">Submit</button>
+                <button class="btn btn-primary" type="submit">Apply</button>
             </form>
         <hr>
         </div>
