--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,6 +12,7 @@
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li routerLinkActive="active"><a routerLink="/recipes">Recipes</a></li>
+<!--                <li routerLinkActive="active"><a routerLink="/menus/new">Current Menu Card</a></li>-->
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
@@ -19,7 +20,7 @@
                     <ul class="dropdown-menu">
                         <li><a>Signed in as </a></li>
                         <li role="separator" class="divider"></li>
-                        <li routerLink="/menu"><a>Your menus</a></li>
+                        <li routerLink="/menus"><a>Your menus</a></li>
 <!--                        <li routerLink="/menu/new"><a>New menu</a></li>-->
                         <li role="separator" class="divider"></li>
                         <li><a>Sign out</a></li>
