--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -9,4 +9,7 @@
                 [recipeListItem]="listItem"></app-recipe-list-item>
     </div>
 </div>
+<hr>
+<hr>
+<app-new-menu></app-new-menu>
 
