added http requests to connect to Menu Service

--- a/src/app/menu/menu-list/menu-list.component.html
+++ b/src/app/menu/menu-list/menu-list.component.html
@@ -1,1 +1,8 @@
-<p>menu list component works!</p>
+<div class="row">
+    <p>in menu list</p>
+    <div class="col-md-12">
+        <app-menu-list-item
+                *ngFor="let listItem of menuList"
+                [menuListItem]="listItem"></app-menu-list-item>
+    </div>
+</div>
