--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,6 +1,7 @@
 <div class="row" id="">
     <div class="col-md-5" id="row-recipe-list">
         <h3>Menus</h3>
-        <app-menu-list></app-menu-list>
+<!--        <app-menu-list></app-menu-list>-->
+        <router-outlet></router-outlet>
     </div>
 </div>
