--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,14 +15,14 @@
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
-                <li *ngIf="!isAuthenticated"><a routerLink="/login">Login</a></li>
+                <li *ngIf="!isAuthenticated" (click)="navigate('/login')">Login</li>
                 <li *ngIf="isAuthenticated" class="dropdown">
 <!--                <li class="dropdown">-->
                     <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-user"></span> <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li>Signed in as {{userFullName}}</li>
                         <li role="separator" class="divider"></li>
-                        <li routerLink="/menus"><a>Your menus</a></li>
+                        <li (click)="navigate('/menus')">Your menus</li>
                         <li role="separator" class="divider"></li>
                         <li (click)="logOut()">Logout</li>
                     </ul>
