--- a/src/app/menu/menu-details/menu-details.component.css
+++ b/src/app/menu/menu-details/menu-details.component.css
@@ -89,8 +89,10 @@ img {
     margin: 5px;
 }
 
-.shopping-list-item {
+#item-name, #item-amount, #item-price{
     display: inline-block;
+    width: 150px;
+    height: fit-content;
     font-size: 16px;
     font-family: Arial;
 }
